# Waived-in-America

./: .gitattributes  .gitignore  README.md  install_r_packages.R  preflight.py  pyproject.toml  r_requirements.md  reproduce.py
data_defs/: competition_fields.md  place_of_manufacture_codes.json
inputs/: unit_cost_clin_tagging.csv
inputs/nsn_reference/: waiver_dod_identifiers_manual.csv  waiver_nsn_reference.csv
output/: procurement-waivers-cleaned.csv
pipeline/01_clean/: bidlink.ipynb  bidlink.py  dla_foia.py  parquement.ipynb  parquement.py  usaspending_backfill.py  waivering.ipynb  waivering.py
pipeline/02_treatment/: identify_treatment_nsns.ipynb  identify_treatment_nsns.py
pipeline/03_panels/: build_anchored_panel.py  build_combined_bidlink.py  build_event_panel.py  load_control_bidlink.py  load_treatment_bidlink.py
pipeline/04_event_study/: estimate_twfe.ipynb  estimate_twfe.py  export_tables.py
pipeline/05_matched/: compute_covariates.py  estimate_did.R  match_nn.R
pipeline/06_synth/: aggregate.R  build_donor_pools.py  build_donor_universe.py  plot.py  synthdid_fits.R
pipeline/07_robustness/: build_appendix_artifacts.py  build_artifacts.py  reaggregate_matched.py  reaggregate_synth.py  run_event_study_refit.py  variants.py
pipeline/08_artifacts/: build_thesis_figures.py  build_thesis_tables.py  panel_overview_descriptives.py  procurement_context_descriptives.py
pipeline/lib/: bidlink_core.py  control_nsns.py  es_stats.py  (+4 more)
raw_data/: procurement-waivers.csv
thesis/: README.md  Waived in America - Honors Thesis.md  build.py  equations.md
(+594 files in other folders)
